@@ -1,3 +1,6 @@
+2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>
+	* Source/DKOutgoingProxy.m: Implement -handleDBusMessage: on the outgoing proxy.
+
 2013-05-29 Niels Grewe <niels.grewe@halbordnung.de>
 	* Source/DKArgument.m: Replace deprecated self->isa access with object_getClass()
 	* Documentation/Introduction.texi: Fix typo
